# existenz

./: .gitignore  LICENSE  PRIVACY.md  README.md  install.sh  pyproject.toml
src/: read-session  sss
tests/: test_sss.py
