[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "existenz"
version = "1.0.0"
description = "Persistent memory for Claude Code — hybrid BM25 + semantic search across all sessions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Florian Stangl" }]
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "session", "search", "semantic", "bm25", "llm", "memory", "existenz", "persistent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sss = "claude_session_search.sss:main"
read-session = "claude_session_search.read_session:main"

[project.urls]
Homepage = "https://github.com/456253475624576457/existenz"
Issues = "https://github.com/456253475624576457/existenz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_search"]
